guerillabackup (0.4.0~rc-20230119) unstable; urgency=low

  Bugfixes:
  * BackupGenerator:
    * Fixed invalid executable path in systemd service templates.
    * Applied pylint.

 -- halfdog <me@halfdog.net>  Thu, 19 Jan 2023 11:15:15 +0000

guerillabackup (0.3.0) unstable; urgency=low

  Features:
  * Added StorageTool policy support to verify sane backup intervals
    and to apply data retention policies.

 -- halfdog <me@halfdog.net>  Wed, 30 Nov 2022 15:55:59 +0000

guerillabackup (0.2.0) unstable; urgency=low

  Features:
  * Added StorageTool to check storage data status, currently
    only checking for invalid file names in the storage directory.
  Bugfixes:
  * Improved TransferService error messages and formatting mistake
    in man page.

 -- halfdog <me@halfdog.net>  Wed, 15 Jun 2022 07:57:19 +0000

guerillabackup (0.1.1) unstable; urgency=low

  * Bugfixes:
    * Correct handling of undefined start condition

 -- halfdog <me@halfdog.net>  Sat, 15 Jan 2022 08:56:30 +0000

guerillabackup (0.1.0) unstable; urgency=low

  * Features:
    * Added flexible backup generator run condition support

 -- halfdog <me@halfdog.net>  Sun,  5 Sep 2021 18:31:00 +0000

guerillabackup (0.0.2) unstable; urgency=low

  * Fixes:
    * Fixed wrong full tar backup interval defaults in template
  * Features:
    * Added TransferService clean shutdown on [Ctrl]-C
  * Misc:
    * Applied lintian/pylint suggestions

 -- halfdog <me@halfdog.net>  Sat, 24 Oct 2020 11:08:00 +0000

guerillabackup (0.0.1) unstable; urgency=low

  * Fixes from Debian mentors review process
    * Removed postrm script template
    * Changed Debian package section from misc to extra
    * Moved file/directory permission setting changes from postinst
      to package building rules
    * Manpage text corrections after spellchecking
  * Features:
    * Python 2 to 3 transition applying pylint for coding style
      and syntax error detection, code refactoring